opam-version: "2.0"
maintainer: "xen-api@lists.xensource.com"
authors: [
  "David Scott"
  "David Sheets"
  "Euan Harris"
  "Vincent Bernardoff"
]
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/xapi-project/ocaml-fd-send-recv"
bug-reports: "https://github.com/xapi-project/ocaml-fd-send-recv/issues"
dev-repo: "git+https://github.com/xapi-project/ocaml-fd-send-recv.git"
doc: "https://github.com/xapi-project/ocaml-fd-send-recv/blob/master/lib/fd_send_recv.mli"
x-maintenance-intent: ["(latest)"]
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "ocaml" {>= "4.14"}
  "dune" {build}
  "odoc" {with-doc}
]
synopsis:
  "Bindings for sendmsg/recvmsg that allow Unix.file_descrs to be sent and received over Unix domain sockets"
